--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1150px) {
+/* @media screen and (max-width: 1150px) {
     .tools .position_bg {
         width: 37%;
     }
@@ -24,10 +24,10 @@
     .header_short {
         margin-right: 25px;
     }
-}
+} */
 
 @media screen and (max-width: 767px) {
-    .navbar {
+    /* .navbar {
         display: block;
     }
 
@@ -55,10 +55,9 @@
 
     .cd-3d-nav-trigger {
         display: inline-block;
-    }
+    } */
 
     .cd-3d-nav-container {
-        /* this is the 3D navigation container */
         position: fixed;
         top: -80px;
         left: 0;
@@ -66,7 +65,6 @@
         width: 100%;
         background-color: #000000;
         visibility: hidden;
-        /* enable a 3D-space for children elements */
         -webkit-perspective: 1000px;
         -moz-perspective: 1000px;
         perspective: 1000px;
@@ -95,7 +93,6 @@
     .cd-3d-nav-trigger span,
     .cd-3d-nav-trigger span::before,
     .cd-3d-nav-trigger span::after {
-        /* hamburger icon in CSS */
         position: absolute;
         width: 28px;
         height: 3px;
@@ -159,11 +156,9 @@
     }
 
     .cd-3d-nav {
-        /* this is the 3D rotating navigation */
         position: relative;
         height: 100%;
         background-color: #343c55;
-        /* Force Hardware Acceleration */
         -webkit-transform: translateZ(0);
         -moz-transform: translateZ(0);
         -ms-transform: translateZ(0);
@@ -187,7 +182,6 @@
     }
 
     .cd-3d-nav::after {
-        /* menu dark cover layer - to enhance perspective effect */
         content: '';
         position: absolute;
         top: 0;
@@ -239,7 +233,6 @@
     }
 
     .cd-3d-nav a::before {
-        /* navigation icons */
         content: '';
         height: 32px;
         width: 32px;
@@ -283,23 +276,22 @@
     }
 
     .nav-is-visible .cd-3d-nav::after {
-        /* menu cover layer - hide it when navigation is visible */
         opacity: 0;
         visibility: hidden;
         -webkit-transition: opacity 0.5s 0s, visibility 0s 0.5s;
         -moz-transition: opacity 0.5s 0s, visibility 0s 0.5s;
         transition: opacity 0.5s 0s, visibility 0s 0.5s;
     }
-
+/* 
     .header_large {
         margin-right: 0;
     }
     
     .header_short {
         margin-right: 0;
-    }
+    } */
 }
-
+/* 
 @media screen and (max-width: 428px) {
     .main_image {
         height: calc(65vh - 83px);
@@ -353,6 +345,4 @@
         height: 22px;
         width: 22px;
     }
-}
-
-@media screen and (max-width: 360px) {}
+} */
