--- a/css/media.css
+++ b/css/media.css
@@ -26,7 +26,7 @@
     }
 } */
 
-@media screen and (max-width: 767px) {
+/* @media screen and (max-width: 767px) { */
     /* .navbar {
         display: block;
     }
@@ -57,7 +57,7 @@
         display: inline-block;
     } */
 
-    .cd-3d-nav-container {
+    /* .cd-3d-nav-container {
         position: fixed;
         top: -80px;
         left: 0;
@@ -76,8 +76,8 @@
         -webkit-transition: -webkit-transform 0.5s 0s, visibility 0s 0.5s;
         -moz-transition: -moz-transform 0.5s 0s, visibility 0s 0.5s;
         transition: transform 0.5s 0s, visibility 0s 0.5s;
-    }
-
+    } */
+/* 
     .cd-3d-nav-container.nav-is-visible {
         visibility: visible;
         -webkit-transform: translateY(0);
@@ -88,9 +88,9 @@
         -webkit-transition: -webkit-transform 0.5s 0s, visibility 0.5s 0s;
         -moz-transition: -moz-transform 0.5s 0s, visibility 0.5s 0s;
         transition: transform 0.5s 0s, visibility 0.5s 0s;
-    }
+    } */
 
-    .cd-3d-nav-trigger span,
+    /* .cd-3d-nav-trigger span,
     .cd-3d-nav-trigger span::before,
     .cd-3d-nav-trigger span::after {
         position: absolute;
@@ -99,20 +99,18 @@
         background-color: #FFF;
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
-    }
+    } */
 
-    .cd-3d-nav-trigger span {
-        /* this is the central line */
+    /* .cd-3d-nav-trigger span {
         top: 21px;
         left: 8px;
         -webkit-transition: background 0.2s 0.5s;
         -moz-transition: background 0.2s 0.5s;
         transition: background 0.2s 0.5s;
-    }
-
+    } */
+/* 
     .cd-3d-nav-trigger span::before,
     .cd-3d-nav-trigger span:after {
-        /* these are the upper and lower lines */
         content: '';
         left: 0;
         -webkit-transition: -webkit-transform 0.2s 0.5s;
@@ -126,19 +124,17 @@
 
     .cd-3d-nav-trigger span::after {
         top: 8px;
-    }
+    } */
 
-    .nav-is-visible .cd-3d-nav-trigger span {
-        /* hide line in the center */
+    /* .nav-is-visible .cd-3d-nav-trigger span {
         background-color: rgba(255, 255, 255, 0);
     }
 
     .nav-is-visible .cd-3d-nav-trigger span::before,
     .nav-is-visible .cd-3d-nav-trigger span::after {
-        /* keep visible other 2 lines */
         background-color: white;
-    }
-
+    } */
+/* 
     .nav-is-visible .cd-3d-nav-trigger span::before {
         -webkit-transform: translateY(8px) rotate(-45deg);
         -moz-transform: translateY(8px) rotate(-45deg);
@@ -153,8 +149,8 @@
         -ms-transform: translateY(-8px) rotate(45deg);
         -o-transform: translateY(-8px) rotate(45deg);
         transform: translateY(-8px) rotate(45deg);
-    }
-
+    } */
+/* 
     .cd-3d-nav {
         position: relative;
         height: 100%;
@@ -179,8 +175,8 @@
         -webkit-transition: -webkit-transform 0.5s;
         -moz-transition: -moz-transform 0.5s;
         transition: transform 0.5s;
-    }
-
+    } */
+/* 
     .cd-3d-nav::after {
         content: '';
         position: absolute;
@@ -194,15 +190,15 @@
         -webkit-transition: opacity 0.5s 0s, visibility 0.5s 0s;
         -moz-transition: opacity 0.5s 0s, visibility 0.5s 0s;
         transition: opacity 0.5s 0s, visibility 0.5s 0s;
-    }
-
+    } */
+/* 
     .cd-3d-nav li {
         height: 100%;
         width: 20%;
         float: left;
-    }
+    } */
 
-    .cd-3d-nav li:first-of-type a::before {
+    /* .cd-3d-nav li:first-of-type a::before {
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='64'%3E%3Cpath fill='%23505977' d='M16 32C7.2 32 0 24.8 0 16S7.2 0 16 0s16 7.2 16 16-7.2 16-16 16zm0-30C8.3 2 2 8.3 2 16s6.3 14 14 14 14-6.3 14-14S23.7 2 16 2zm11 15c-.6 0-1-.4-1-1 0-5.5-4.5-10-10-10S6 10.5 6 16c0 .6-.4 1-1 1s-1-.4-1-1C4 9.4 9.4 4 16 4s12 5.4 12 12c0 .6-.4 1-1 1zm-11.3 5l2.7-12c.1-.5.7-.9 1.2-.7.5.1.9.7.8 1.2l-2.8 12.1c.8.4 1.4 1.3 1.4 2.4 0 1.7-1.3 3-3 3s-3-1.3-3-3c0-1.5 1.2-2.8 2.7-3zm.3 4c.6 0 1-.4 1-1s-.4-1-1-1-1 .4-1 1 .4 1 1 1z'/%3E%3Cpath fill='%23FFF' d='M16 64C7.2 64 0 56.8 0 48s7.2-16 16-16 16 7.2 16 16-7.2 16-16 16zm0-30C8.3 34 2 40.3 2 48s6.3 14 14 14 14-6.3 14-14-6.3-14-14-14zm11 15c-.6 0-1-.4-1-1 0-5.5-4.5-10-10-10S6 42.5 6 48c0 .6-.4 1-1 1s-1-.4-1-1c0-6.6 5.4-12 12-12s12 5.4 12 12c0 .6-.4 1-1 1zm-11.3 5l2.7-12c.1-.5.7-.9 1.2-.7.5.1.9.7.8 1.2l-2.8 12.1c.8.4 1.4 1.3 1.4 2.4 0 1.7-1.3 3-3 3s-3-1.3-3-3c0-1.5 1.2-2.8 2.7-3zm.3 4c.6 0 1-.4 1-1s-.4-1-1-1-1 .4-1 1 .4 1 1 1z'/%3E%3C/svg%3E");
     }
 
@@ -220,9 +216,9 @@
 
     .cd-3d-nav li:nth-of-type(5) a::before {
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='64'%3E%3Cpath fill='%23505977' d='M31.7 4.8L19.4 17c-.6.6-1.4 1-2.2 1-.5 0-1-.1-1.4-.3l-1 1c-.2.2-.5.3-.7.3-.3 0-.5-.1-.7-.3-.4-.4-.4-1 0-1.4l1-1c-.2-.4-.3-.9-.3-1.4 0-.8.3-1.6.9-2.2L27.3.3c.4-.4 1-.4 1.4 0l3 3c.2.2.3.5.3.8 0 .2-.1.5-.3.7zM28 2.5L16.4 14c-.2.2-.3.5-.3.8s.1.6.3.8c.4.4 1.2.4 1.6 0L29.6 4.1 28 2.5zM18.1 4H5C3.4 4 2 5.4 2 7v19.9C2 28.6 3.4 30 5 30h20c1.7 0 3-1.4 3-3.1V13.8c0-.6.5-1 1-1 .6 0 1 .4 1 1V27c0 2.8-2.3 5-5 5H5c-2.8 0-5-2.2-5-5V7c0-2.8 2.3-5 5-5h13.1c.6 0 1 .4 1 1s-.4 1-1 1z'/%3E%3Cpath fill='%23FFF' d='M31.7 36.8L19.4 49c-.6.6-1.4 1-2.2 1-.5 0-1-.1-1.4-.3l-1 1c-.2.2-.5.3-.7.3-.3 0-.5-.1-.7-.3-.4-.4-.4-1 0-1.4l1-1c-.2-.4-.3-.9-.3-1.4 0-.8.3-1.6.9-2.2l12.3-12.4c.4-.4 1-.4 1.4 0l3 3c.2.2.3.5.3.8 0 .2-.1.5-.3.7zM28 34.5L16.4 46c-.2.2-.3.5-.3.8s.1.6.3.8c.4.4 1.2.4 1.6 0l11.6-11.5-1.6-1.6zM18.1 36H5c-1.6 0-3 1.4-3 3v19.9C2 60.6 3.4 62 5 62h20c1.7 0 3-1.4 3-3.1V45.8c0-.6.5-1 1-1 .6 0 1 .4 1 1V59c0 2.8-2.3 5-5 5H5c-2.8 0-5-2.2-5-5V39c0-2.8 2.3-5 5-5h13.1c.6 0 1 .4 1 1s-.4 1-1 1z'/%3E%3C/svg%3E");
-    }
+    } */
 
-    .cd-3d-nav a {
+    /* .cd-3d-nav a {
         position: relative;
         display: block;
         height: 100%;
@@ -249,39 +245,39 @@
         background-size: 32px 64px;
         background-repeat: no-repeat;
         background-position: 0 0;
-    }
+    } */
 
-    .no-touch .cd-3d-nav a:hover {
+    /* .no-touch .cd-3d-nav a:hover {
         background-color: #2b3145;
-    }
-
+    } */
+/* 
     .cd-3d-nav .cd-selected a {
         background-color: #212635;
-    }
-
+    } */
+/* 
     .no-touch .cd-3d-nav .cd-selected a:hover {
         background-color: #212635;
-    }
-
+    } */
+/* 
     .cd-3d-nav .cd-selected a::before {
         background-position: 0 -32px;
-    }
+    } */
 
-    .nav-is-visible .cd-3d-nav {
+    /* .nav-is-visible .cd-3d-nav {
         -webkit-transform: translateZ(0);
         -moz-transform: translateZ(0);
         -ms-transform: translateZ(0);
         -o-transform: translateZ(0);
         transform: translateZ(0);
-    }
+    } */
 
-    .nav-is-visible .cd-3d-nav::after {
+    /* .nav-is-visible .cd-3d-nav::after {
         opacity: 0;
         visibility: hidden;
         -webkit-transition: opacity 0.5s 0s, visibility 0s 0.5s;
         -moz-transition: opacity 0.5s 0s, visibility 0s 0.5s;
         transition: opacity 0.5s 0s, visibility 0s 0.5s;
-    }
+    } */
 /* 
     .header_large {
         margin-right: 0;
@@ -290,7 +286,7 @@
     .header_short {
         margin-right: 0;
     } */
-}
+/* } */
 /* 
 @media screen and (max-width: 428px) {
     .main_image {
